--- a/Guidebook.html
+++ b/Guidebook.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html ng-app="Guidebook">
   <head>
-    <script src="js/angular.js"></script>
-    <script src="js/angular-route.js"></script>
+    <script src="angular.js"></script>
+    <script src="angular-route.js"></script>
 
     <script src="Guidebook.js"></script>
 
