--- a/public/Guidebook.html
+++ b/public/Guidebook.html
@@ -7,7 +7,7 @@
     <script src="Guidebook.js"></script>
 
     <script src="controller/ChapterController.js"></script>
-    <script src="controller/NotesController.js"></script>
+    <script src="controller/NoteController.js"></script>
     <script src="model/NoteModel.js"></script>
     <script src="model/ChapterModel.js"></script>
 
@@ -18,7 +18,7 @@
   </head>
   <body>
 
-    <h1>Welcome to the AngularJS Starter Guidebook</h1>
+    <h1>Welcome to the Guidebook</h1>
     <div ng-view>
       <!-- Views are added here at runtime. -->
     </div>
